ESURVEY-6742 Alignment issue with Matrix elements

--- a/src/main/webapp/resources/css/disabled.css
+++ b/src/main/webapp/resources/css/disabled.css
@@ -3,6 +3,11 @@ body {
 	background-color: #fff;
 }
 
+.myleft { text-align:left; } 
+.mycenter { text-align:center; } 
+.myright { text-align:right; } 
+.myfull { text-align:justify; }
+
 .survey-element {
 	margin: 5px; 
 	margin-top: 25px;
